--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </div>
             
             <div class="created-by">
-                SYSTEM CREATED BY MR. WAQAR
+                SYSTEM CREATED BY ×Ali_RaJput×
             </div>
         </div>
         
