--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                     `;
                 });
                 
-                resultsHTML += `<div class="credit">CREDIT: MR. ARSLAN</div>`;
+                resultsHTML += `<div class="credit">CREDIT: ×Ali_RaJput×  </div>`;
                 
                 resultContainer.innerHTML = resultsHTML;
             }
